--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -4,6 +4,11 @@ jobs:
   check-version:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
       - name: Check if version has been updated
         id: check
         uses: EndBug/version-check@v2.1.0
