--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -13,5 +13,5 @@ jobs:
         id: check
         uses: EndBug/version-check@v2.1.0
       - name: Log when changed
-        if: steps.check.outputs.changed == 'true'
-        run: 'echo "Version change found in commit ${{ steps.check.outputs.commit }}! New version: ${{ steps.check.outputs.version }} (${{ steps.check.outputs.type }})"'
+        if: steps.check.outputs.changed == 'false'
+        run: exit 1
